# Geant4_Trials

./: CMakeLists.txt  simulation.cc
Outputs/: output0_t0.root  output0_t1.root  output0_t2.root  output0_t3.root  test.root
include/: action.hh  construction.hh  generator.hh
macros/: run.mac
src/: action.cc  construction.cc  generator.cc  run.cc
